# quadrapassel

./: .gitlab-ci.yml  AUTHORS  ChangeLog.old  Makefile.am  NEWS  README.md  TODO  TODO.md  autogen.sh  blockops.cpp  blockops.h  blocks-cache.cpp  blocks-cache.h  blocks.cpp  configure.ac  gnometris.desktop.in.in  highscores.cpp  main.cpp  meson.build  meson.options  preview.cpp  preview.h  quadrapassel.6  quadrapassel.desktop.in.in  quadrapassel.doap  quadrapassel.schemas.in  renderer.cpp  renderer.h  scoreframe.cpp  tetris.cpp  tetris.h
build-aux/: meson_post_install.py
build-aux/flatpak/: org.gnome.Quadrapassel.Devel.json
data/: Makefile.am  meson.build  org.gnome.Quadrapassel.appdata.xml.in  org.gnome.Quadrapassel.desktop.in  org.gnome.Quadrapassel.desktop.in.in  org.gnome.Quadrapassel.gschema.xml  org.gnome.Quadrapassel.metainfo.xml.in  org.gnome.Quadrapassel.metainfo.xml.in.in  org.gnome.Quadrapassel.service.in  org.gnome.quadrapassel.appdata.xml.in  org.gnome.quadrapassel.desktop.in  org.gnome.quadrapassel.gschema.xml  org.gnome.quadrapassel.gschema.xml.in  quadrapassel.6  quadrapassel.appdata.xml  quadrapassel.appdata.xml.in  quadrapassel.desktop.in  quadrapassel.desktop.in.in  quadrapassel.schemas.in
data/icons/: Makefile.am
data/icons/HighContrast/: Makefile.am
data/icons/hicolor/: Makefile.am
flatpak/: org.gnome.Quadrapassel.json  org.gnome.quadrapassel.json
help/: ChangeLog.old  LINGUAS  Makefile.am  meson.build  quadrapassel.omf.in
help/C/: bug-filing.page  develop.page  documentation.page  get-involved.page  index.docbook  index.page  keyboard.page  playgame.page  preferences.page  quadrapassel.xml  score.page  settings.page  translate.page
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/en_GB/: en_GB.po
help/es/: es.po
help/eu/: eu.po
help/fi/: fi.po
help/fr/: fr.po
help/gl/: gl.po
help/hu/: hu.po
help/id/: id.po
help/it/: it.po
help/ja/: ja.po
help/ko/: ko.po
help/oc/: oc.po
help/pl/: pl.po
help/pt_BR/: pt_BR.po
help/ro/: ro.po
help/ru/: ru.po
help/sl/: sl.po
help/sr/: sr.po
help/sr@latin/: sr@latin.po
help/sv/: sv.po
help/uk/: uk.po
help/zh_CN/: zh_CN.po
pix/: Makefile.am  form.xcf  new.xcf
po/: Makevars  POTFILES.in  POTFILES.skip  ab.po  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gl.po  gu.po  he.po  hi.po  (+53 more)
snap/: snapcraft.yaml
src/: Makefile.am  blocks-cache.cpp  blocks.h  config.vapi  game-view.vala  game.vala  help-overlay.blp  highscores.h  history.vala  main.cpp  meson.build  more-info-button.blp  more-info-button.vala  org.gnome.Quadrapassel.gresource.xml  preview.h  preview.vala  quadrapassel.gresource.xml  quadrapassel.vala  renderer.h  rules-dialog.blp  score-dialog.vala  scoreframe.cpp  scoreframe.h  shortcuts-dialog.blp  sound.cpp  sound.h  stream-player.vala  style.css  tetris.cpp  tetris.h
src/vapi/: config.vapi  input-event-codes.vapi  libcanberra-gtk3.vapi
subprojects/: libgnome-games-support.wrap
subprojects/libgnome-games-support/: .gitlab-ci.yml  .meson-subproject-wrap-hash.txt  README.md  meson.build  meson.options  vala-lint.conf
subprojects/libgnome-games-support/games/: meson.build  meson.build.orig  sounds.vala  theme-selector-dialog.vala
subprojects/libgnome-games-support/games/scores/: context.vala  context.vala.orig  dialog.vala  score.vala
subprojects/libgnome-games-support/games/vapi/: openal.vapi  sndfile.vapi
subprojects/libgnome-games-support/po/: LINGUAS  bg.po  cs.po  eu.po  fi.po  hu.po  ka.po  kk.po  kw.po  lt.po  pt_BR.po  ru.po  sl.po  sr.po  sv.po  tr.po  uk.po  zh_CN.po
subprojects/libgnome-games-support/tests/: test-scores.vala
subprojects/packagefiles/: 0001.patch  0002.patch  0003.patch
