@YELP_HELP_RULES@
HELP_ID = quadrapassel

HELP_MEDIA = \
	media/fig2.png		\
	media/fig3.png		\
	media/fig4.png		\
	media/fig5.png		\
	media/go-home.png	\
	media/go-previous.png	\
	media/part1.jpg		\
	media/part2.jpg		\
	media/part3.jpg		\
	media/part4.jpg		\
	media/previous.png	\
	media/quadrapassel.png	\
	media/quadrapassel22.png


HELP_FILES = \
	bug-filing.page		\
	develop.page		\
	documentation.page	\
	get-involved.page	\
	index.page		\
	legal.xml		\
	license.page		\
	playgame.page		\
	preferences.page	\
	score.page		\
	translate.page

HELP_LINGUAS = ca cs de el en_GB es eu fi fr gl hu it ja oc ro sl sr sr@latin sv zh_CN

-include $(top_srcdir)/git.mk
