
help_media = [
    'media/fig2.png',
    'media/fig3.png',
    'media/fig4.png',
    'media/fig5.png',
    'media/go-home.png',
    'media/go-previous.png',
    'media/part1.jpg',
    'media/part2.jpg',
    'media/part3.jpg',
    'media/part4.jpg',
    'media/previous.png',
    'media/quadrapassel.png',
    'media/quadrapassel22.png'
]
help_files = [
    'bug-filing.page',
    'develop.page',
    'documentation.page',
    'get-involved.page',
    'index.page',
    'legal.xml',
    'license.page',
    'playgame.page',
    'preferences.page',
    'score.page',
    'translate.page'
]


gnome.yelp(meson.project_name(),
    sources: help_files,
    media: help_media,
    symlink_media: true
)
