help_media = [
    'media/go-home.png',
    'media/go-previous.png',
    'media/org.gnome.Quadrapassel.svg',
    'media/previous.png',
]
help_files = [
    'bug-filing.page',
    'develop.page',
    'documentation.page',
    'index.page',
    'legal.xml',
    'license.page',
    'playgame.page',
    'preferences.page',
    'score.page',
    'translate.page'
]

gnome.yelp(meson.project_name(),
    sources: help_files,
    media: help_media,
    symlink_media: true
)
