icon16dir=$(datadir)/icons/hicolor/16x16/apps
icon22dir=$(datadir)/icons/hicolor/22x22/apps
icon24dir=$(datadir)/icons/hicolor/24x24/apps
icon32dir=$(datadir)/icons/hicolor/32x32/apps
icon48dir=$(datadir)/icons/hicolor/48x48/apps
iconscalabledir=$(datadir)/icons/hicolor/scalable/apps

icon16_DATA = 16x16/quadrapassel.png
icon22_DATA = 22x22/quadrapassel.png
icon24_DATA = 24x24/quadrapassel.png
icon32_DATA = 32x32/quadrapassel.png
icon48_DATA = 48x48/quadrapassel.png
iconscalable_DATA = scalable/quadrapassel.svg
