icon16dir=$(datadir)/icons/HighContrast/16x16/apps
icon22dir=$(datadir)/icons/HighContrast/22x22/apps
icon24dir=$(datadir)/icons/HighContrast/24x24/apps
icon32dir=$(datadir)/icons/HighContrast/32x32/apps
icon48dir=$(datadir)/icons/HighContrast/48x48/apps
icon256dir=$(datadir)/icons/HighContrast/256x256/apps

icon16_DATA = 16x16/quadrapassel.png
icon22_DATA = 22x22/quadrapassel.png
icon24_DATA = 24x24/quadrapassel.png
icon32_DATA = 32x32/quadrapassel.png
icon48_DATA = 48x48/quadrapassel.png
icon256_DATA = 256x256/quadrapassel.png

EXTRA_DIST = $(icon16_DATA) $(icon22_DATA) $(icon24_DATA) $(icon32_DATA) $(icon48_DATA) $(icon256_DATA)
